overflow in mobile devices resolved

--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ hr{
     }
 
     .middle{
-        padding-top: 20px;
+        padding-top: 50px;
         padding-bottom: 20px;
     }
 
